[tool.poetry]
name = "foxtail"
version = "2.0.0"
description = "A script to help write about recent firefox bookmarks."
authors = ["BlakeJC94 <blakejamescook@gmail.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.scripts]
foxtail = "foxtail.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
